@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-12T08:24:54Z",
-  "count_outdated" : 504,
-  "uniques_outdated" : 284,
-  "count" : 631,
+  "timestamp" : "2022-06-12T16:29:07Z",
+  "count_outdated" : 506,
+  "uniques_outdated" : 285,
+  "count" : 632,
   "uniques" : 327,
   "clones" : [
-    {
-      "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 15,
