@@ -1,12 +1,7 @@
 {
-  "count": 127,
+  "count": 126,
   "uniques": 21,
   "clones": [
-    {
-      "timestamp": "2022-05-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-30T00:00:00Z",
       "count": 15,
